:bug: fix(Paginador): substituir toList() por collect(Collectors.toList()) para retornar listas mutáveis nos métodos da classe Paginador